tweaked navbar so now fixed, added links to icons and worked on spacing elements

--- a/project1.css
+++ b/project1.css
@@ -1,84 +1,103 @@
 .navbar {
 	background-color: #fc7b03;
 	display: flex;
-	justify-content: center;
-	width: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 5px 0;	
+	position: fixed;
+	z-index: 9999;
 }
-h2 {
-	font-size: 2rem;
-}
-.nav-button {
-    display: inline-block;
+
+.navbar a {
     border: none;
-    padding: 1rem 2rem;
-    margin: 0;
+    padding: 1rem 1rem;
+	width: 20%;
     text-decoration: none;
     background: #fc7b03;
     color: #000000;
     font-family: Arial;
-    font-size: 1.5rem;
+	font-weight: bold;
     cursor: pointer;
     text-align: center;
-    transition: background 250ms ease-in-out, 
-                transform 150ms ease-in-out;
     -webkit-appearance: none;
     -moz-appearance: none;
 }
 
-.nav-button:hover,
-.nav-button:focus {
-    background: #ffffff;
+.navbar a:hover,
+.navbar a:focus {
+    background: #db6a00;
 }
 
-.nav-button:focus {
-    outline: 1px solid #fff;
-    outline-offset: -4px;
-}
-
-.nav-button:active {
-    transform: scale(0.99);
-}
-
-.intro-page {
+.intro-section {
 	font-family: Arial;
-	padding-left: 75px;
-	padding-top: 20px;
-	color: black;
+	padding-left: 200px;
+	padding-top: 100px;
+	text-align: center;
+	color: #ffffff;
 	background-color: #fc7b03;
 	background-image: linear-gradient(to bottom right, #fc7b03, #000000);
-	width: 100%;
-	height: 100%;
-	}
+	height: 100vh;
 	
-button {
-	background: transparent;
-	border: none;
+}
+	
+.intro-section img {
+	position: absolute;
+	left: 0;
+	bottom: 0;
 }
 
-.about-page {
+.about-section {
 	background-color: #000000;
-	width: 100%;
-	height: 100%;
+	height: 100vh;
 	font-family: Arial;
-	padding-left: 75px;
-	padding-top: 20px;
-	color: #ffffff;
+	padding-left: 200px;
+	padding-top: 100px;
+	color: #fc7b03;
 }
 
-.about-page p {
+.about-section p {
 	font-size: 1.5rem;
-	text-align: left;
-	
+	max-width: 700px;
 }
 
-.contact-page {
+.about-section div {
+display: inline;
+}
+
+.portfolio-section {
 	background-color: #fc7b03;
-	width: 100%;
-	height: 100%;
+	height: 100vh;
 	font-family: Arial;
-	padding-left: 75px;
-	padding-top: 20px;
+	font-weight: bold;
+	padding-left: 200px;
+	padding-top: 100px;
 	color: #000000;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+.contact-section {
+	background-color: #000000;
+	height: 100vh;
+	font-family: Arial;
+	padding-left: 200px;
+	padding-top: 100px;
+	color: #fc7b03;
 }	
-	   
+
+.contact-section a img {
+	background: #fc7b03;
+	padding: 4px;
+}
+
+html {
+	scroll-behavior: smooth;
+	box-sizing: border-box;
+}
+
+h2 {
+	font-size: 2rem;
+}
 
